add fvm to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ example/.fvm
 test_resources/ios/Flutter/flutter_export_environment.sh
 test_resources/android/local.properties
 test_resources/ios/Flutter/Generated.xcconfig
+.fvm/
